[package]
name = "team"
version = "0.1.0"
authors = ["wuyuan"]
description = """A rust toolbox lib for fun"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/wuyuan1002/team"
readme = "README.md"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "team"
path = "core/lib.rs"
test = true

[dependencies]
team-runtime = { version = "0.1.0", path = "member/runtime" }

[workspace]
resolver = "2"
members = [
    "member/runtime",
]

[[example]]
name = "ex"
path = "examples/ex.rs"
