[package]
name = "team-runtime"
version = "0.1.0"
authors = ["wy"]
description = """Team crate member - runtime"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/wuyuan1002/team"
readme = "../../README.md"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "team_runtime"
path = "src/lib.rs"

[dependencies]
