[package]
name = "team-runtime"
version = "0.2.0"
authors = ["wuyuan"]
description = """team crate member - runtime"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/wuyuan1002/team"
readme = "../../README.md"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "runtime"
path = "src/lib.rs"
test = true

[dependencies]
num_cpus = "1.16.0"

[[test]]
name = "test"
path = "tests/te.rs"
